# python-whois

./: .gitignore  .hgignore  1  DONE  MANIFEST  MANIFEST.in  Makefile  PKG-INFO  README  README.md  README.rst  TODO  compare_known_tld.py  exampleExtend.py  license  makeTestdataAll.sh  makefile  out  pyproject.toml  reformat-code.sh  setup.py  test.py  test.sh  test2.py  test3.py  testAll.sh  testExtend.py  testwhl.py  testwhl.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  python-publish.yml
Old/: analize_patterns.py  compare_known_tld.py  convert_to_dict.sh  makeTestdataAll.sh  test3.py
Old/tests/: failed-parsing.txt  new-test.txt  ok-domains.txt  private-reg.txt
analizer/: .gitignore  analizeIanaTld.py  ianaCrawler.py  ianaDatabase.py  investigateTld.py  pslGrabber.py
docs/: Authors.md  Docker.md  Features.md  Updates.md  Usage.md  index.html  whoisdomain-cli.md
testdata/: DOMAINS.txt  make_testdata.sh
testdata/example.com/: in  nameservers  output  test.out
testdata/example.net/: input  nameservers  output  test.out
testdata/example.org/: in  input  nameservers  output  test.out
testdata/google.com/: input  nameservers  output
testdata/hello.xyz/: input  nameservers  output
tests/: new-test.txt  ok-domains.txt
whois/: _0_init_tld.py  _1_query.py  _2_parse.py  _3_adjust.py  __init__.py  doParse.py  doQuery.py  doWhoisCommand.py  domain.py  dummyCache.py  exceptions.py  handleDateStrings.py  helpers.py  lastWhois.py  main.py  noneStrings.py  parameterContext.py  processWhoisDomainRequest.py  quotaStrings.py  tld.py  tldInfo.py  tld_regexpr.py  tld_regexpr.py.old  version.py  whoisCliInterface.py  whoisParser.py
work/: version
(+41 files in other folders)
