[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[project]
    name = "whois"
    dynamic = ['version']

    authors = [
      { name="mboot-github"},
    ]

    maintainers = [
      { name="Maarten Boot", email="130295084+mboot-github@users.noreply.github.com" },
    ]

    description = "Python package for retrieving WHOIS information of domains."
    readme = "README.md"
    requires-python = ">=3.9"

    license = "MIT"

    classifiers = [
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Environment :: Console",
        "Programming Language :: Python :: 3",
        "Topic :: Internet",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]

    keywords = [
        "Python",
        "whois",
        "tld",
        "domain",
        "expiration",
        "registrar",
    ]

[project.urls]
    "Bug Tracker" = "https://github.com/mboot-github/WhoisDomain/issues"
    "Home Page" = "https://github.com/mboot-github/WhoisDomain/"
    "Repository" = "https://github.com/mboot-github/WhoisDomain/"

[tool.hatch.version]
    path = "whois/version.py"

[tool.hatch.build]
    only-packages = true

    include = [
        "whois/",
    ]

    exclude = [
        "/Old/*",
        "/lib/*",
        "/etc/*",
        "/bin/*",
        "/testdata/*",
        "Makefile",
        ".gitignore",
        "/.gitignore",
    ]

[tool.pylama]
    max_line_length = 160
    skip = "*/.pytest_cache/*, */.tox/*, */mypy_cache/*, ./dist, ./docs"
